fixing background on december 2. to display correctly on mobile phones.

--- a/public/december/2/styles.css
+++ b/public/december/2/styles.css
@@ -56,9 +56,10 @@ body {
     
     body {
         box-sizing: border-box;
-        background-image: url("../../img/kalendertelefonRudi.png");
+        background-image: url("picture/kalenderphone.png");
         background-repeat: no-repeat;
         background-size: cover;
+        background-color: blue;
 
     }
 
